--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,17 @@
-backcall
-comm
-contourpy==1.3.0
-cycler==0.12.1
-debugpy
-decorator
-executing
-filelock==3.15.4
-fonttools==4.53.1
-fsspec==2024.9.0
-importlib_metadata
-importlib_resources==6.4.4
-ipykernel
-ipython
-jedi
-Jinja2==3.1.4
-joblib==1.4.2
-jupyter_client
-jupyter_core
-kiwisolver==1.4.7
-MarkupSafe==2.1.5
+# Core ML 
+torch==2.5.1
+torchvision==0.20.1
+
+# Scientific Stack
+numpy==2.1.3
+scipy==1.14.1
+pandas==2.2.3
+scikit-learn==1.5.2
+
+# Visualization
 matplotlib==3.9.2
-matplotlib-inline
-mpmath==1.3.0
-nest_asyncio
-networkx==3.2.1
-numpy==2.0.2
-packaging
-pandas==2.2.2
-parso
-pexpect
-pickleshare
-pillow==10.4.0
-platformdirs
-prompt_toolkit
-psutil
-ptyprocess
-pure_eval
-Pygments
-pyparsing==3.1.4
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.14
-PyQt5_sip==12.15.0
-pyqtgraph==0.13.7
-python-dateutil
-pytz==2024.1
-pyzmq
-scikit-learn==1.5.1
-scipy==1.13.1
 seaborn==0.13.2
-six
-stack-data
-sympy==1.13.2
-threadpoolctl==3.5.0
-torch==2.4.1
-torchvision==0.19.1
-tornado
-traitlets
-typing_extensions
-tzdata==2024.1
-wcwidth
-zipp
+
+# GUI
+PyQt5==5.15.11
+pyqtgraph==0.13.7
